# deep-dream

./: .gitignore  .gitmodules  Gemma4-26b-32k  Gemma4-e2b-32k  README.en.md  README.ja.md  README.md  bench_after_bm25.json  bench_after_cold.json  bench_after_knn.json  bench_before_cold.json  bench_perf.py  config_loader.py  example_usage.py  pyproject.toml  requirements.txt  service_api.py  service_config.example.json  start-deepdream.bat  start-tmg-web.bat  start-tmg.bat  test_ui_server.py  web_server.py
<__main__.P object at 0x7d0be69943e0>/: graph.db  vectors.db
<__main__.P object at 0x7dbe81d99220>/: graph.db  vectors.db
<__main__.P object at 0x7e85fdd93da0>/: graph.db
deploy/: deep-dream.skill  nginx-llm-openai-lb.example.conf  start-deepdream-web.bat
docs/: DEVELOPMENT.md  deep-dream 开发蓝图.md  research_proposal.md  vision.md  vision_task.md
processor/: __init__.py  debug_log.py  embedding_client.py  entity_processor.py  exceptions.py  llm_client.py  models.py  ollama_chat_api.py  perf.py  processor.py  relation_processor.py  storage.py  utils.py
scripts/: comprehensive_query.py  dream-code  expand_context.py  migrate_normalize_embeddings.py  query_entity_relation.py  query_relations_network.py  query_single_entity.py  query_tool.py  search_entities.py  search_memory_cache.py  tmg_skill_api_smoke.py
server/: api.py  chat_session.py  config.py  dashboard.py  monitor.py  queue.py  registry.py  sse.py  task_queue.py  visualizer.py  web.py
tests/: conftest.py  test_always_version.py  test_always_version_v2.py  test_always_version_v3.py  test_api.py  (+17 more)
(+172 files in other folders)
