[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-dream"
version = "0.2.0"
description = "Deep Dream knowledge graph server — remember, find, and dream with your knowledge"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    # Core
    "openai>=1.0.0",
    "flask>=3.0",
    "httpx>=0.24",
    "python-dateutil>=2.8.0",
    "numpy>=1.21.0",
    # Storage
    "neo4j>=5.0",
    "sqlite-vec>=0.1.6",
    # Embedding / ML
    "sentence-transformers>=2.2.0",
    "transformers>=4.51.0,<5.0.0",
    "pillow>=9.1.0",
    # Visualization
    "pyvis>=0.3.0",
    "networkx>=3.0.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["processor*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_llm: test requires USE_REAL_LLM=1",
    "slow: test takes > 5 seconds",
    "e2e: test requires a running Deep-Dream server",
]
